# chad

./: CMakeLists.txt  shell.nix  ssh_host_rsa_key  ssh_host_rsa_key.pub
client/: CMakeLists.txt  chad.cpp  color.hpp  content.cpp  content.hpp  gui.cpp  gui.hpp  tcp_client.cpp  tcp_client.hpp  user.hpp
server/: CMakeLists.txt  IPCServer.cpp  IPCServer.hpp  chad.cpp
shared/: CMakeLists.txt  contentType.hpp  eventHandler.hpp  reactor.cpp  reactor.hpp
src/: chad.cpp
